Основной функционал ApiGateway

--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -2,8 +2,63 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Yarp.ReverseProxy": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "SwaggerEndpoints": [
+    {
+      "Key": "FileStoringService",
+      "Name": "File Storing Service",
+      "Url": "http://filestoring-service:5000/swagger/v1/swagger.json",
+      "GatewayPathPrefix": "/files",
+      "ServicePathPrefixToReplace": "/files"
+    },
+    {
+      "Key": "FileAnalysisService",
+      "Name": "File Analysis Service",
+      "Url": "http://fileanalysis-service:5000/swagger/v1/swagger.json",
+      "GatewayPathPrefix": "/analysis",
+      "ServicePathPrefixToReplace": "/analysis"
+    }
+  ],
+
+  "ReverseProxy": {
+    "Routes": {
+      "files_upload": {
+        "ClusterId": "filestoring",
+        "Match": { "Path": "/files/upload" },
+        "Transforms": [ { "PathPattern": "/files/upload" } ]
+      },
+      "files_download": {
+        "ClusterId": "filestoring",
+        "Match": { "Path": "/files/{**catch-all}" },
+        "Transforms": [ { "PathPattern": "/files/{**catch-all}" } ]
+      },
+      "analysis_request": {
+        "ClusterId": "analysis",
+        "Match": { "Path": "/analysis", "Methods": [ "POST" ] },
+        "Transforms": [ { "PathPattern": "/analysis" } ]
+      },
+      "analysis_get": {
+        "ClusterId": "analysis",
+        "Match": { "Path": "/analysis/{**catch-all}" },
+        "Transforms": [ { "PathPattern": "/analysis/{**catch-all}" } ]
+      }
+    },
+    "Clusters": {
+      "filestoring": {
+        "Destinations": {
+          "dest1": { "Address": "http://filestoring-service:8080" }
+        }
+      },
+      "analysis": {
+        "Destinations": {
+          "dest1": { "Address": "http://fileanalysis-service:8080" }
+        }
+      }
+    }
+  }
 }
