--- a/FileStoringService/appsettings.json
+++ b/FileStoringService/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "AppDatabase": "Host=postgres;Port=5432;Database=file_storing_db;Username=postgres_user;Password=postgres_password"
+  },
+
+  "FileStorage": {
+    "BasePath": "/app/storage"
+  }
 }
