Запуск FileStoring + DB

--- a/FileStoringService/appsettings.json
+++ b/FileStoringService/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "AppDatabase": "Host=postgres;Port=5432;Database=file_storing_db;Username=postgres_user;Password=postgres_password"
+    "AppDatabase": "Host=localhost;Port=5432;Database=file_storing_db;Username=postgres_user;Password=postgres_password"
   },
 
   "FileStorage": {
