--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
-version: '3.8'
-
 services:
+  apigateway:
+    build:
+      context: ./ApiGateway
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
+    depends_on:
+      - filestoringservice
+      - fileanalysisservice
+    restart: unless-stopped
+  
   filestoringservice:
     build:
       context: ./FileStoringService
@@ -18,6 +30,26 @@ services:
       - db_filestoring
     restart: unless-stopped
   
+  fileanalysisservice:
+    build:
+      context: ./FileAnalysisService
+      dockerfile: Dockerfile
+    ports:
+      - "8002:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
+      - ConnectionStrings__AppDatabase=Host=db_fileanalysis;Port=5432;Database=file_analysis_db;Username=postgres_user;Password=postgres_password
+      - ServiceUrls__FileStoringService=http://filestoringservice:8080
+      - FileStorageForAnalysis__BasePath=/app/analysis_storage
+      - WordCloudApi__BaseUrl=https://quickchart.io/wordcloud
+    volumes:
+      - analysis_files_data:/app/analysis_storage
+    depends_on:
+      - db_fileanalysis
+      - filestoringservice
+    restart: unless-stopped
+  
   db_filestoring:
     image: postgres:15-alpine
     environment:
@@ -30,6 +62,20 @@ services:
       - filestoring_data:/var/lib/postgresql/data
     restart: unless-stopped
 
+  db_fileanalysis:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_USER: postgres_user
+      POSTGRES_PASSWORD: postgres_password
+      POSTGRES_DB: file_analysis_db
+    ports:
+      - "5434:5432"
+    volumes:
+      - fileanalysis_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
   filestoring_data:
+  fileanalysis_data:
   filestoring_files_data:
+  analysis_files_data:
