ApiGateway общается с FilesStoring

--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -12,14 +12,14 @@
     {
       "Key": "FileStoringService",
       "Name": "File Storing Service",
-      "Url": "http://filestoring-service:8080/swagger/v1/swagger.json",
+      "Url": "http://filestoringservice:8080/swagger/v1/swagger.json",
       "GatewayPathPrefix": "/files",
       "ServicePathPrefixToReplace": "/files"
     },
     {
       "Key": "FileAnalysisService",
       "Name": "File Analysis Service",
-      "Url": "http://fileanalysis-service:8080/swagger/v1/swagger.json",
+      "Url": "http://fileanalysisservice:8080/swagger/v1/swagger.json",
       "GatewayPathPrefix": "/analysis",
       "ServicePathPrefixToReplace": "/analysis"
     }
