--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -52,12 +52,12 @@
     "Clusters": {
       "filestoring": {
         "Destinations": {
-          "dest1": { "Address": "http://filestoring-service:8080" }
+          "dest1": { "Address": "http://filestoringservice:8080" }
         }
       },
       "analysis": {
         "Destinations": {
-          "dest1": { "Address": "http://fileanalysis-service:8080" }
+          "dest1": { "Address": "http://fileanalysisservice:8080" }
         }
       }
     }
