--- a/FileAnalysisService/appsettings.json
+++ b/FileAnalysisService/appsettings.json
@@ -13,7 +13,7 @@
     "FileStoringService": "http://localhost:8001"
   },
   "WordCloudApi": {
-    "BaseUrl": "https://quickchart.io/wordcloud"
+    "BaseUrl": "https://quickchart.io"
   },
   "FileStorageForAnalysis": {
     "BasePath": "/app/analysis_storage"
